@@ -11,7 +11,7 @@ all: clean .manpages $(PACKAGE).tar.gz
 	for i in $(MANPAGES); do \
 	  rman -S -f html -r '' < $$i | \
 	  sed -e "s}name='sect\([0-9]*\)' href='#toc[0-9]*'>\(.*\)}name='sect\1'>\2}g ; \
-	  s}<a href='#toc'>Table of Contents</a>}<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>socklog</A><hr>}g ; \
+	  s}<a href='#toc'>Table of Contents</a>}<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>socklog</A><hr>}g ; \
 	  s}<!--.*-->}}g" \
 	  > doc/`basename $$i`.html ; \
 	done ; \
