@@ -4,7 +4,7 @@
 <title>socklog - installation</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a><br>
+<a href="https://smarden.org/pape/">G. Pape</a><br>
 <a href="index.html">socklog</a><br>
 <hr>
 <h1>socklog - installation</h1>
@@ -13,7 +13,7 @@ Since version 0.3.0, <i>socklog</i> installs into
 <a href="http://cr.yp.to/slashpackage.html">/package</a>.
 <p>
 Check that you have the recent version of
-<a href="http://smarden.org/runit/">runit</a> installed.
+<a href="https://smarden.org/runit/">runit</a> installed.
 <p>
 Download
 <a href="socklog-2.1.1.tar.gz">socklog-2.1.1.tar.gz</a> into
@@ -44,7 +44,7 @@ To report success:
  # mail pape-socklog-2.1.1@xxiv.smarden.org &lt;compile/sysdeps
 </pre>
 If you use <i>socklog</i> regularly, please
-<a href="http://smarden.org/pape/#contribution">contribute</a> to the project.
+<a href="https://smarden.org/pape/#contribution">contribute</a> to the project.
 <p>
 Refer to <a href="configuration.html">Configuration</a> for
 configuring and setting up <i>socklog</i> services.
