@@ -6,7 +6,7 @@
 <title>socklog-check(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>socklog</A><hr><p>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>socklog</A><hr><p>
 
 <h2><a name='sect0'>Name</a></h2>
 socklog-check - checks for the availability of a <i>socklog(8)</i> service. 
@@ -45,8 +45,8 @@ to standard error and exits 111.
 <h2><a name='sect5'>See Also</a></h2>
 <i>socklog(8)</i>, <i>socklog-conf(8)</i>, <i>svlogd(8)</i>,
 <i>tryto(1)</i>, <i>uncat(1)</i>, <i>sv(8)</i>, <i>runsv(8)</i>, <i>runsvdir(8)</i> <p>
- <i>http://smarden.org/socklog/</i><br>
-  <i>http://smarden.org/runit/</i><br>
+ <i>https://smarden.org/socklog/</i><br>
+  <i>https://smarden.org/runit/</i><br>
  
 <h2><a name='sect6'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
