@@ -6,7 +6,7 @@
 <title>socklog-conf(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>socklog</A><hr><p>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>socklog</A><hr><p>
 
 <h2><a name='sect0'>Name</a></h2>
 socklog-conf - sets up a <i>socklog(8)</i> service. 
@@ -107,8 +107,8 @@ ln -s /etc/sv/socklog-notify /var/service/
 <h2><a name='sect8'>See Also</a></h2>
 <i>socklog(8)</i>, <i>svlogd(8)</i>, <i>nc(1)</i>, <i>tryto(1)</i>, <i>uncat(1)</i>, <i>socklog-check(8)</i>,
 <i>tcpsvd(8)</i>, <i>sv(8)</i>, <i>runsv(8)</i>, <i>runsvdir(8)</i> <p>
- <i>http://smarden.org/socklog/</i><br>
-  <i>http://smarden.org/runit/</i><br>
+ <i>https://smarden.org/socklog/</i><br>
+  <i>https://smarden.org/runit/</i><br>
  
 <h2><a name='sect9'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
