@@ -6,7 +6,7 @@
 <title>tryto(1) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>socklog</A><hr><p>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>socklog</A><hr><p>
 
 <h2><a name='sect0'>Name</a></h2>
 tryto - tries to run a command limited by a timeout or number of tries,
@@ -86,8 +86,8 @@ code from <i>prog</i>. <p>
 <h2><a name='sect6'>See Also</a></h2>
 <i>socklog(8)</i>, <i>uncat(1)</i>, <i>svlogd(8)</i>, <i>multilog(8)</i>, <i>lseek(2)</i>
 <p>
- <i>http://smarden.org/socklog/</i><br>
-  <i>http://smarden.org/runit/</i><br>
+ <i>https://smarden.org/socklog/</i><br>
+  <i>https://smarden.org/runit/</i><br>
  
 <h2><a name='sect7'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
