@@ -4,7 +4,7 @@
 <title>socklog - upgrading from previous versions</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a><br>
+<a href="https://smarden.org/pape/">G. Pape</a><br>
 <a href="index.html">socklog</a><br>
 <hr>
 <h1>socklog - upgrading from previous versions</h1>
@@ -20,7 +20,7 @@ you don't necessarily need to adapt existing installations.
 Additionally <a href="socklog-conf.8.html">socklog-conf</a> now by default
 creates a <tt>./check</tt> script in the <tt>socklog-unix</tt> service
 directory, which is utilized by <i>runit</i>'s
-<a href="http://smarden.org/runit/sv.8.html">sv</a> program when starting
+<a href="https://smarden.org/runit/sv.8.html">sv</a> program when starting
 or checking the service.
 To update existing installations, you can create the script manually:
 <pre>
@@ -46,14 +46,14 @@ than 777.
 No further action from you is required.
 <h3>1.2.0 to 1.3.0 or 1.3.1</h3>
 With this version socklog supports old-style syslog network logging through
-UDP in cooperation with the <a href="http://smarden.org/runit/">runit</a>
+UDP in cooperation with the <a href="https://smarden.org/runit/">runit</a>
 package.
 The web page about <a href="network.html">network logging</a> has been
 updated accordingly.
 <h3>1.1.0 or 1.1.1 to 1.2.0</h3>
 The <a href="socklog-conf.8.html">socklog-conf</a> program now creates
 slightly different <tt>run</tt> scripts that utilize the new
-<a href="http://smarden.org/runit/chpst.8.html">chpst</a> program from the
+<a href="https://smarden.org/runit/chpst.8.html">chpst</a> program from the
 <i>runit</i> package.
 Please refer to the <a href="examples.html">examples</a> if you want to adapt
 your current <tt>run</tt> scripts.
