@@ -4,7 +4,7 @@
 <title>socklog - use dietlibc</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a><br>
+<a href="https://smarden.org/pape/">G. Pape</a><br>
 <a href="index.html">socklog</a><br>
 <hr>
 <h1>socklog - use dietlibc</h1>
