@@ -54,7 +54,7 @@ sv(8),
 runsv(8),
 runsvdir(8)
 .LP
- http://smarden.org/socklog/
- http://smarden.org/runit/
+ https://smarden.org/socklog/
+ https://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
