@@ -173,7 +173,7 @@ socklog-check(8),
 tcpsvd(8),
 nc(1)
 .LP
- http://smarden.org/socklog/
- http://smarden.org/runit/
+ https://smarden.org/socklog/
+ https://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
