@@ -186,7 +186,7 @@ svlogd(8),
 multilog(8),
 lseek(2)
 .LP
- http://smarden.org/socklog/
- http://smarden.org/runit/
+ https://smarden.org/socklog/
+ https://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
