@@ -88,7 +88,7 @@ runsv(8),
 svlogd(8),
 tryto(1)
 .LP
- http://smarden.org/socklog/
- http://smarden.org/runit/
+ https://smarden.org/socklog/
+ https://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
