@@ -1,3 +1,3 @@
 Copyright 2001-2005
 G. Pape
-http://smarden.org/socklog/
+https://smarden.org/socklog/
